--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -4,7 +4,7 @@
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
 title: Rasool # Website name
-baseURL: 'https://rasools.github.io/' # Website URL
+baseURL: 'rasools.github.io/' # Website URL
 
 ############################
 ## LANGUAGE
