--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -10,14 +10,11 @@ main:
   # - name: Posts
   #   url: '#posts'
   #   weight: 20
-  - name: Experience
-    url: '#experience'
-    weight: 20  
-  # - name: Projects
-  #   url: '#projects'
-  #   weight: 30
-  - name: Talks
-    url: '#talks'
+  - name: Projects
+    url: '#projects'
+    weight: 30
+  - name: Events
+    url: '#events'
     weight: 40
   - name: Publications
     url: '#featured'
