--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,18 +7,18 @@ main:
   - name: Home
     url: '#about'
     weight: 10
-  # - name: Posts
-  #   url: '#posts'
-  #   weight: 20
+  - name: Publications
+    url: '#featured'
+    weight: 20
   - name: Projects
     url: '#projects'
     weight: 30
+  - name: Posts
+    url: '#posts'
+    weight: 20
   - name: Events
     url: '#events'
     weight: 40
-  - name: Publications
-    url: '#featured'
-    weight: 50
   - name: Contact
     url: '#contact'
     weight: 60
