--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -19,11 +19,12 @@ main:
   - name: Events
     url: '#events'
     weight: 50
-  - name: Contact
-    url: '#contact'
-    weight: 60
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
   - name: CV
-    url: 'uploads/resume.pdf'
+    url: 'uploads/CV-Rasool.pdf'
+    weight: 60
+  - name: Contact
+    url: '#contact'
     weight: 70
+
